--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>my website</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1> this is index page </h1>
-    <br> <br> 
-    <h2> this is paragraph </h2>
-    <br>
-    <h4> Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptatibus aliquam cum? <br>
-         Vel  voluptatibus dolore maiores nam reiciendis magnam non perspiciatis id tempora eligendi eum 
-         <br> quidem vero, eos optio magni dicta quod provident maxime excepturi velit possimus animi 
-         esse! <br> Aliquid! </h4>
+    <h1> this is heading </h1>
+    <h4> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias doloribus ipsum veritatis, <br>
+         accusantium quia nam totam eligendi asperiore\s voluptate culpa laboriosam ullam consectetur, <br>
+          eum harum voluptatum consequuntur sequi sed dolorem. </h4>
 </body>
 </html>
